
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int VOID ;
typedef int LPOVERLAPPED ;
typedef scalar_t__ HANDLE ;
typedef scalar_t__ DWORD ;
typedef int BOOL ;


 scalar_t__ CreateFile (char*,int ,int,int *,int ,int ,int *) ;
 int DeviceIoControl (scalar_t__,int ,int ,int ,scalar_t__*,int,scalar_t__*,int ) ;
 int FILE_EXECUTE ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int MAGIC_IOCTL ;
 int OPEN_EXISTING ;
 int ShowError () ;
 scalar_t__ malloc (int) ;

VOID KillMySelf()
{

 DWORD junk;
 DWORD *OutBuff;
 DWORD *InBuff;
 BOOL bResult;
 HANDLE hDevice;
 DWORD i;

  hDevice = CreateFile("\\\\.\\shadow", FILE_EXECUTE,FILE_SHARE_READ|FILE_SHARE_WRITE,
                      ((void*)0), OPEN_EXISTING, 0, ((void*)0));

  if (hDevice == INVALID_HANDLE_VALUE) ShowError();

  OutBuff=(DWORD*)malloc(0x18);
  if(!OutBuff) ShowError();

  OutBuff[3]=(DWORD)hDevice;

  DeviceIoControl(hDevice,
                  MAGIC_IOCTL,
                  0,0,
                  OutBuff,0x18,
                  &junk,
                  (LPOVERLAPPED)((void*)0));

}
